# amora

./: .gitignore  Makefile.am  README  README.md  amora_descr.t2t  credits.md  fixing_hardy.md  how_to_help.md  how_to_install.md  how_to_install_source.md  p4x_descr.t2t  portuguese.md  projectDetails.md  roadmap.md  verifying_functionality.md  what_is_amora.md
amora-client/: amora.py
amora-client/libs/: application.py  configure.py  stopwatch.py
amora-client/maemo/: Makefile  amora  amora.desktop  amora.edc  amora_icon.edc  btio.py  controller.edc  dbus_discover.py  icon_macro.edc  icon_prg.edc  main_win.edc  protocol.py  setup.py  tablet_amora.edc  tablet_amora.py
amora-client/maemo/debian/: amora-client.links  changelog  control  copyright  postinst  rules
amora-client/pys60/: amora.py
amora-client/pys60/libs/: application.py  keyboard.py  stopwatch.py
amora-server/: .gitignore  Makefile  Makefile.am  amora-server.spec  configure.ac
amora-server/amora-applet/: README  about.cpp  about.h  about.ui  amora-applet.pro  amora-applet.qrc  amora-server.cpp  amora-server.h  applet.cpp  applet.h
amora-server/amora-cli/: .gitignore  Makefile.am  configure.ac  libamora-uninstalled.pc.in  libamora.pc.in
amora-server/amora-cli/debian/: README.source
amora-server/amora-cli/src/: amora.c  amora.h  bluecode.h  linux.c  loop.h  main.c
amora-server/debian/: .gitignore  README.Debian  README.source  amora-applet.docs  amora-applet.install  amora-applet.menu  amora-cli.menu  amorad-gui.desktop  changelog  control  copyright  rules  watch
amora-server/src/: amora.c  bluecode.c  dbus.c  imscreen.c  log.c  log.h  loop.c  loop.h  main.c
amora-server/utests/: utest.c  utest_libfake.c  utest_log.c  utest_loop.c
artwork/: 6681_conn.xcf  6681_disconn.xcf  background_wide.xcf  background_wide_conn.xcf  keymap_full.xcf  keymap_wide.xcf  penguin_sleep.xcf
branches/amora-modular/: configure.ac
branches/amora-modular/debian/: changelog  control
branches/amora-modular/src/: amora-dbus.c  amora-dbus.h  amora-log.c  amora-loop.c  amora-loop.h  amora.c  bluetooth-bluez-dbus.c  bluetooth-bluez-dbus.h  bluetooth-bluez.c  bluetooth-frontend.c  dbus.c  dbus.h  imscreen.h  loop.c  loop.h  main.c  protocol.c  x11_event.c
branches/amora-modular/utests/: utest.c  utest_amora-dbus.c  utest_amora-log.h  utest_dbus.h  utest_log.h  utest_loop.c
branches/pc_server-hal/: Doxyfile.in  Makefile.am  configure.ac
branches/pc_server-hal/src/: bluecode.h  hal.c  hal.h  imscreen.h  linux.c  log.h  loop.c  loop.h  main.c  x11_event.h
cell-client/data/: conn_help.txt  start_help.txt
cell_client/: application.py  bt_client.py  keyboard.py  presenter.py  wallpaper.py
cell_client/data/: start_help.txt
cell_client/imgs/: about.txt
cell_client/libs/: application.py  bt_client.py  helpwindow.py  keyboard.py  stopwatch.py  wallpaper.py
debian/: rules
mk/: auxdevel.am
pc-server/: Makefile.am
pc-server/src/: main.c
pc_server/: BUILD-FAQ  Doxyfile.in  Makefile  Makefile.am  bluecode.h  configure.ac  linux.c  main.c  protocol.h  x11_event.h
pc_server/m4/: auxdevel.m4
pc_server/src/: bluecode.c  bluecode.h  imscreen.c  imscreen.h  linux.c  log.c  log.h  loop.c  main.c  protocol.c  protocol.h  x11_event.c  x11_event.h
pys60/libs/: bt_client.py
src/: Doxyfile.in  Makefile  amora-dbus.h  amora-log.c  amora-log.h  amora-loop.c  amora-loop.h  bluetooth-bluez.c  bluetooth-frontend.c  bluetooth-wrapper.h  dbus.c  imscreen.c  log.h  loop.c  loop.h  main.c  protocol.h  x11_event.h
tags/amora-1.0/amora-client/libs/: stopwatch.py
tags/amora-1.0/amora-server/: README
tags/amora-1.0/amora-server/src/: log.h  loop.c  loop.h  protocol.h
tags/amora-1.1/: README  configure.ac
tags/amora-1.1/amora-client/pys60/: README
tags/amora-1.1/amora-server/src/: bluecode.c  loop.c  main.c  protocol.c
tags/amora-1.1/amora-server/utests/: utest_dbus.c  utest_log.c
tags/amora-1.1/debian/: README.Debian  control
trunk/: amora_descr.t2t
trunk/amora-cli/: Makefile.am  amorad.8
trunk/amora-client/: amora.py
trunk/amora-client/libs/: application.py  configure.py  helpwindow.py  stopwatch.py
trunk/amora-client/maemo/: Makefile  amora  amora.edc  amora_icon.edc  btio.py  controller.py  dbus_discover.py  protocol.py  setup.py  tablet_amora.edc  tablet_amora.py
trunk/amora-client/maemo/debian/: changelog  control  postinst
trunk/amora-client/pys60/: amora.py
trunk/amora-client/pys60/data/: conn_help.txt
trunk/amora-server/: Makefile  Makefile.am  README  configure.ac
trunk/amora-server/amora-applet/: about.cpp  about.h  about.ui  amora-applet.pro  amora-server.cpp  amora-server.h  applet.cpp  applet.h
trunk/amora-server/amora-cli/: amora-server.spec  configure.ac  libamora-uninstalled.pc.in  libamora.pc.in
trunk/amora-server/debian/: README.source  amora-cli.docs  changelog  control  copyright  rules
trunk/amora-server/m4/: define_dirs.m4
trunk/amora-server/src/: amora.c  amora.h  bluecode.c  dbus.c  linux.c  log.c  log.h  loop.c  main.c
trunk/amora-server/utests/: utest_libfake.c  utest_log.c  utest_loop.c  utest_loop.h
trunk/artwork/: background_full.xcf  background_full_conn.xcf  keymap_full.xcf
trunk/cell_client/: presenter.py
trunk/cell_client/imgs/: about.txt
trunk/cell_client/libs/: application.py  bt_client.py  configure.py  wallpaper.py
trunk/pc-server/: amora.spec
trunk/pc_server/: Doxyfile.in  Makefile  Makefile.am  README  amora.1  configure.ac
trunk/pc_server/m4/: auxdevel.m4
trunk/pc_server/mk/: libtool-fix.am
trunk/pc_server/src/: bluecode.h  imscreen.c  imscreen.h  linux.c  log.c  log.h  main.c  protocol.c  protocol.h  x11_event.c  x11_event.h
utests/: utest_amora-dbus.h  utest_amora-log.c  utest_amora-loop.c  utest_amora-loop.h  utest_loop.c
wiki/: ChangeLog-1.0  credits.wiki  fixing_hardy.wiki  how_to_hacker.wiki  how_to_help.wiki  how_to_install.wiki  how_to_install_new.wiki  how_to_install_source.wiki  portuguese.wiki  projectDetails.wiki  roadmap.wiki  verifying_functionality.wiki  what_is_amora.wiki
(+16 files in other folders)
